# bioproject-py-mongo

./: Makefile  README.md  pyproject.toml
bioproject_py_mongo/: bioproject_py_mongo.py  list_mongodb_paths.py
