[tool.poetry]
name = "bioproject-py-mongo"
version = "0.1.0"
description = ""
authors = ["Mark A. Miller <MAM@lbl.gov>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pymongo = "^4.8.0"
lxml = "^5.3.0"
xmltodict = "^0.13.0"
xml2dict = "^0.2.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
